--- a/web/index.html
+++ b/web/index.html
@@ -40,6 +40,30 @@
   <script src="flutter.js" defer></script>
 </head>
 <body>
+
+<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+
+<script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.9.1/firebase-app.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  const firebaseConfig = {
+  apiKey: "AIzaSyBSSEQrhDvg6IiCY6mXgdad-OEsVnRXj6A",
+  authDomain: "attendance-mangement-system.firebaseapp.com",
+  projectId: "attendance-mangement-system",
+  storageBucket: "attendance-mangement-system.appspot.com",
+  messagingSenderId: "671683445551",
+  appId: "1:671683445551:web:f9e128475bb722eed757da"
+};
+
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+</script>
+
   <script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
